compiler/src/test/resources/amyc/parser/failing/ClassDefError3.grading.amy
object ClassDef
  case class Foo(x, y: Int) : Bar
end ClassDef
